<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightBlue">

        <Button
            android:id="@+id/btn_my_location"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/text_use_my_location"
            android:textAlignment="center"
            app:icon="@drawable/ic_baseline_gps_fixed_24"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_search_for_theaters" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_theater_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/list_item_theater_result" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:hint="@string/text_help_zip_code"
            app:layout_constraintBottom_toTopOf="@+id/btn_search_for_theaters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_theater_list">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_zip_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="number"
                android:maxLength="5" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_search_for_theaters"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/text_zip_search"
            app:icon="@drawable/ic_baseline_search_24"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_my_location"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>