<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.example.moviefinder.database.model.Movie" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightBlue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:contentDescription="@string/text_cd_movie_backdrop"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/tool_backdrop"
                app:tint="#80000000"
                app:tintMode="src_atop"/>

            <ImageView
                android:id="@+id/iv_poster_thumb"
                android:layout_width="wrap_content"
                android:layout_height="243dp"
                android:layout_marginStart="32dp"
                android:contentDescription="@string/text_cd_poster_thumbnail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,27:41"
                app:layout_constraintStart_toStartOf="@+id/iv_backdrop"
                app:layout_constraintTop_toTopOf="@+id/iv_backdrop"
                app:layout_constraintVertical_bias=".2"
                tools:srcCompat="@drawable/tool_poster_thumb" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif-black"
                android:text="@{movie.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/iv_poster_thumb"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster_thumb"
                tools:text="Movie Title" />

            <TextView
                android:id="@+id/tv_movie_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="124dp"
                android:text="@{movie.longReleaseDate}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                tools:text="Release Date" />

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:text="@{movie.overview}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cb_want_to_watch"
                app:layout_constraintTop_toBottomOf="@+id/cb_want_to_watch"
                tools:text="Move Overview" />

            <CheckBox
                android:id="@+id/cb_want_to_watch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:button="@xml/watch_list_check_state"
                android:buttonTint="@color/colorAccent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/text_cb_add_to_your_watchlist"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_date" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Released on "
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>